# Self_Balancing_Hexapod_Robot

./: .GITIGNORE  .gitignore  LICENSE  README.md  imu_data_test.py  requirements.txt  setup.sh
Electrical/KiCad/: .gitignore  imu.kicad_sch  power_converters.kicad_sch  spiderbot.kicad_pcb  spiderbot.kicad_prl  spiderbot.kicad_pro  spower_monitor.kicad_sch
KiCad/: Hexapod_bot.kicad_pcb  Hexapod_bot.kicad_prl  Hexapod_bot.kicad_pro  Hexapod_bot.kicad_sch  bom.csv  fp-info-cache  imu.kicad_sch  power_converters.kicad_sch  servo_control.kicad_sch  spower_monitor.kicad_sch  spower_monitor.kicad_sch-bak  ~Hexapod_bot.kicad_sch.lck
KiCad/KiCad/: Hexapod_bot.kicad_pro  fp-info-cache  servo_control.kicad_sch  spower_monitor.kicad_sch
KiCad/spiderbotGerbers/: Hexapod_bot-B_Cu.gbr  Hexapod_bot-B_Mask.gbr  Hexapod_bot-B_Paste.gbr  Hexapod_bot-B_Silkscreen.gbr  Hexapod_bot-Edge_Cuts.gbr  Hexapod_bot-F_Cu.gbr  Hexapod_bot-F_Mask.gbr  Hexapod_bot-F_Paste.gbr  Hexapod_bot-F_Silkscreen.gbr  Hexapod_bot-In1_Cu.gbr  Hexapod_bot-In2_Cu.gbr  Hexapod_bot-NPTH.drl  Hexapod_bot-PTH.drl  Hexapod_bot-job.gbrjob
environment/: pyvenv.cfg
hardware/: README.md  hexapodBOM.csv
hardware/KiCad/: spiderbot.kicad_pro  spiderbot.kicad_sch  spower_monitor.kicad_sch
hardware/PCB/: controlBoardBOM.csv
hardware/PCB/KiCad/: servo_control.kicad_sch  spiderbot.kicad_prl
ros2_ws/: .gitignore  README.md  requirements.txt  servo_offsets.json
ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/install/hexapod_com_calculator/lib/hexapod_com_calculator/: com_calculator
ros2_ws/install/hexapod_com_calculator/share/hexapod_com_calculator/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/install/hexapod_description/share/hexapod_description/: package.sh  package.xml
ros2_ws/install/hexapod_description/share/hexapod_description/cmake/: hexapod_descriptionConfig.cmake
ros2_ws/install/hexapod_description/share/hexapod_description/urdf/: hexapod.urdf  hexapod.xacro
ros2_ws/install/hexapod_kinematics_py/lib/hexapod_kinematics_py/: ik_node  kinematics
ros2_ws/install/hexapod_kinematics_py/share/hexapod_kinematics_py/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/install/hexapod_msgs/share/hexapod_msgs/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/install/hexapod_msgs/share/hexapod_msgs/cmake/: ament_cmake_export_targets-extras.cmake  export_hexapod_msgs__rosidl_generator_cExport.cmake  export_hexapod_msgs__rosidl_generator_cppExport.cmake  export_hexapod_msgs__rosidl_generator_pyExport.cmake  export_hexapod_msgs__rosidl_typesupport_fastrtps_cppExport.cmake  hexapod_msgsConfig.cmake  hexapod_msgs__rosidl_typesupport_cExport-noconfig.cmake  hexapod_msgs__rosidl_typesupport_cExport.cmake  hexapod_msgs__rosidl_typesupport_introspection_cExport.cmake
ros2_ws/install/hexapod_msgs/share/hexapod_msgs/msg/: FootStatus.idl  FootStatus.json  LegCommands.idl  LegCommands.msg  LegPositions.json  Polygon.json
ros2_ws/install/i2c_comms/share/i2c_comms/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/install/imu_interface/lib/imu_interface/: imu_interface_node
ros2_ws/install/imu_interface/share/imu_interface/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/install/kinematics/include/: SpiderLeg.hpp
ros2_ws/install/kinematics/lib/kinematics/: kinematics_test
ros2_ws/install/kinematics/share/kinematics/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/install/servo_control/share/servo_control/: package.dsv  package.ps1  package.sh  package.xml
ros2_ws/install/support_polygon_calculator/share/support_polygon_calculator/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/log/: latest_build
ros2_ws/src/gpio_sensors/gpio_sensors/: package.xml  setup.py
ros2_ws/src/gpio_sensors/gpio_sensors/gpio_sensors/: gpio_sensor_node.py
ros2_ws/src/gpio_sensors/gpio_sensors/launch/: gpio_sensors.launch.py
ros2_ws/src/hexapod_com_calculator/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ros2_ws/src/hexapod_com_calculator/hexapod_com_calculator/: com_calculator.py  com_node.py
ros2_ws/src/hexapod_com_calculator/src/: bindings.cpp  com_calculator.cpp
ros2_ws/src/hexapod_description/: CMakeLists.txt
ros2_ws/src/hexapod_description/launch/: view_hexapod.launch.py
ros2_ws/src/hexapod_description/urdf/: hexapod.xacro
ros2_ws/src/hexapod_kinematics_py/: package.xml  setup.cfg  setup.py
ros2_ws/src/hexapod_kinematics_py/hexapod_kinematics_py/: ik_node.py  kinematics.py
ros2_ws/src/hexapod_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/hexapod_msgs/msg/: JointAngles.msg  LegPositions.msg  Polygon.msg
ros2_ws/src/i2c_comms/: package.xml  setup.cfg  setup.py
ros2_ws/src/imu_interface/: package.xml  setup.cfg  setup.py
ros2_ws/src/imu_interface/imu_interface/: imu_interface_node.py
ros2_ws/src/imu_interface/launch/: imu_interface.launch.py
ros2_ws/src/kinematics/: CMakeLists.txt  package.xml  servo_offsets.json
ros2_ws/src/kinematics/include/: Hexapod.hpp  SpiderLeg.hpp
ros2_ws/src/kinematics/launch/: forward_kinematics.launch.py  hexapod_kinematics.launch.py  inverse_kinematics.launch.py
ros2_ws/src/kinematics/src/: Hexapod.cpp  Hexapod.hpp  SpiderLeg.cpp  SpiderLeg.hpp  Visualization.cpp  Visualization.hpp  forward_kinematics_node.cpp  inverse_kinematics_node.cpp  inverse_kinematics_npde.cpp  main.cpp
ros2_ws/src/servo_control/: package.xml  setup.py
ros2_ws/src/servo_control/launch/: servo_control_launch.py
ros2_ws/src/servo_control/servo_control/: servo_control_node.py
ros2_ws/src/servo_control/servo_control/utilities/: calibrate_servos.py  preset_positions.py
ros2_ws/src/servo_control/test/: test_pca2.py
ros2_ws/src/support_polygon_calculator/: CMakeLists.txt  package.xml
ros2_ws/src/support_polygon_calculator/src/: support_polygon_calculator.cpp
(+46 files in other folders)
