<?xml version="1.0"?>
<package format="3">
  <name>hexapod_kinematics_py</name>
  <version>0.1.0</version>
  <description>Hexapod Kinematics in Python</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <!-- Build tool dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime dependencies -->
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <!-- Export -->
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
