<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>support_polygon_calculator</name>
  <version>0.1.0</version>
  <description>Support polygon calculator for hexapod stability and gait control.</description>
  <maintainer email="aeventre@buffalo.edu">alec</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <!-- Only required if using custom messages -->
  <!-- <buildtool_depend>rosidl_default_generators</buildtool_depend> -->

  <!-- Build-time dependencies -->
  <build_depend>rclcpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rclcpp_components</build_depend>
  <build_depend>libcgal-dev</build_depend>
  <build_depend>libeigen3-dev</build_depend>
  <build_depend>libboost-all-dev</build_depend>

  <!-- Run-time dependencies -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>
  <exec_depend>libcgal-dev</exec_depend>
  <exec_depend>libeigen3-dev</exec_depend>
  <exec_depend>libboost-all-dev</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
