<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gpio_sensors</name>
  <version>0.0.1</version>
  <description>A package to monitor GPIO sensors for foot states</description>
  <maintainer email="ellahick@buffalo.edu">spiderbot</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <exec_depend>python3</exec_depend>
  <exec_depend>python3-rpi.gpio</exec_depend>

  <export>
  <build_type>ament_python</build_type>
  </export>
</package>
